      this is also mostly to help inheritance scenarios formulate the best 
      choice of primary key columns.  [ticket:185]
    - added 'bind' argument to Sequence.create()/drop(), ColumnDefault.execute()
    - columns can be overridden in a reflected table with a "key" 
      attribute different than the column's name, including for primary key
      columns [ticket:650]
    - some enhancements to "column targeting", the ability to match a column
      to a "corresponding" column in another selectable.  this affects mostly
      ORM ability to map to complex joins
    - MetaData and all SchemaItems are safe to use with pickle.  slow
      table reflections can be dumped into a pickled file to be reused later.
      Just reconnect the engine to the metadata after unpickling. [ticket:619]
    - added a mutex to QueuePool's "overflow" calculation to prevent a race 
      condition that can bypass max_overflow
    - fixed grouping of compound selects to give correct results. will break
      on sqlite in some cases, but those cases were producing incorrect
      results anyway, sqlite doesn't support grouped compound selects
      [ticket:623]
    - fixed precedence of operators so that parenthesis are correctly applied
      [ticket:620]
    - calling <column>.in_() (i.e. with no arguments) will return 
      "CASE WHEN (<column> IS NULL) THEN NULL ELSE 0 END = 1)", so that 
      NULL or False is returned in all cases, rather than throwing an error
      [ticket:545]
    - fixed "where"/"from" criterion of select() to accept a unicode string
      in addition to regular string - both convert to text()
    - added standalone distinct() function in addition to column.distinct()
      [ticket:558]
    - result.last_inserted_ids() should return a list that is identically
      sized to the primary key constraint of the table.  values that were 
      "passively" created and not available via cursor.lastrowid will be None.